@@ -13,7 +13,7 @@ include /usr/share/quilt/quilt.make
 
 name = globus-ftp-client
 _name = globus_ftp_client
-version = 8.26
+version = 8.27
 soname = 2
 
 INSTALLDIR = $(CURDIR)/debian/tmp
